Fixed a few bugs in wanted tags and bounty boards.